[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/CaveStory32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/CaveStory78.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/UI/HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/Graphics/Icon/Icon os ps.png" type="Texture" id=4]
[ext_resource path="res://assets/CaveStory40.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/Graphics/Icon/icon science.png" type="Texture" id=6]
[ext_resource path="res://assets/Graphics/Icon/icon tree.png" type="Texture" id=7]
[ext_resource path="res://assets/Cave-Story.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 8 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
margin_bottom = -982.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background HUD" type="ColorRect" parent="."]
margin_right = 1921.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fondChargement" type="ColorRect" parent="."]
margin_left = 973.632
margin_top = 2.94739
margin_right = 1414.63
margin_bottom = 74.9474
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chargement2Noire" type="ColorRect" parent="."]
margin_left = 974.632
margin_top = 3.94739
margin_right = 1413.63
margin_bottom = 73.9474
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chargement" type="ColorRect" parent="."]
margin_left = 974.632
margin_top = 3.94739
margin_right = 974.632
margin_bottom = 73.9474
color = Color( 0.219608, 0.45098, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResearchLabel" type="Label" parent="."]
margin_left = 974.632
margin_top = 3.04489
margin_right = 1414.63
margin_bottom = 73.0449
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "0%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodSprite" type="TextureRect" parent="."]
margin_left = 10.1386
margin_top = 4.45544
margin_right = 60.1386
margin_bottom = 61.4554
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodNumber" type="Label" parent="."]
margin_left = 87.0
margin_right = 308.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodPerSec" type="Label" parent="."]
margin_left = 87.0
margin_top = 50.0
margin_right = 287.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "+0 per sec"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoneSprite" type="TextureRect" parent="."]
margin_left = 575.0
margin_top = 2.228
margin_right = 625.0
margin_bottom = 52.228
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoneNumber" type="Label" parent="."]
margin_left = 650.0
margin_right = 871.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonePerSec" type="Label" parent="."]
margin_left = 650.0
margin_top = 50.0
margin_right = 850.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "+0 per sec"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Science" type="TextureRect" parent="."]
margin_left = 904.952
margin_top = 1.03647
margin_right = 954.952
margin_bottom = 51.0365
rect_scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = 1420.05
margin_top = 1.83368
margin_right = 1445.05
margin_bottom = 26.8337
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostPerSec" type="Label" parent="."]
margin_left = 328.066
margin_top = 50.0
margin_right = 547.066
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
text = "-2 per sec"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GottaEat" type="Label" parent="."]
margin_left = 282.463
margin_top = 5.0
margin_right = 524.463
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBeforeNext" type="Label" parent="."]
margin_left = 1770.44
margin_top = 1.5
margin_right = 1921.44
margin_bottom = 79.5
custom_fonts/font = ExtResource( 1 )
text = "Time before next attack :"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextWave" type="Label" parent="."]
margin_left = 1769.31
margin_top = 44.5872
margin_right = 1913.31
margin_bottom = 75.5872
custom_fonts/font = ExtResource( 1 )
text = "???"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberOfBacteria" type="Label" parent="."]
margin_left = 1537.0
margin_top = 1.5
margin_right = 1736.0
margin_bottom = 45.5
custom_fonts/font = ExtResource( 1 )
text = "Number of Bacteria :"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberBacteria" type="Label" parent="."]
margin_left = 1537.0
margin_top = 48.0
margin_right = 1736.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 1 )
text = "3 / 20"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
